reduce 1px width to resultsOverflow in health to fix the zoom out issue Jira Job HLT-2334
git-svn-id: http://itrepos/apps/web_ctm/trunk@22550 5f447213-944a-4844-baf2-6ecc2693b7b8
(cherry picked from commit 7101934)

--- a/WebContent/brand/yhoo/css/health.yhoo.css
+++ b/WebContent/brand/yhoo/css/health.yhoo.css
@@ -529,17 +529,17 @@ body > div > header a.bottombar .btn-call:hover {
 }
 @media (min-width: 768px) {
   .health .featuresMode .resultsOverflow {
-    width: 536px;
+    width: 535px;
   }
 }
 @media (min-width: 992px) {
   .health .featuresMode .resultsOverflow {
-    width: 779px;
+    width: 778px;
   }
 }
 @media (min-width: 1200px) {
   .health .featuresMode .resultsOverflow {
-    width: 949px;
+    width: 948px;
   }
 }
 .health .featuresMode .labelInColumn {
